welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:10: error: not found: value sortieTrouve
} while (sortieTrouve);
         ^